# test_thrift_map

./: CMakeLists.txt
src/: CMakeLists.txt
src/receiver/: receiver.cpp  receiver_no_map.cpp
src/transmitter/: transmitter.cpp
thrift/: CMakeLists.txt  msg.thrift  msgMap.thrift
